@@ -1,6 +1,6 @@
 {
   "name": "@sswroom/sswr",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "description": "Libraries made by sswroom",
   "main": "sswr.js",
   "scripts": {
